# devops-model

./: .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  peek_rewards.py  plot_training.py  pyproject.toml
core/: bash_parser.py  rewards.py  scenarios.py  state.py
data/: comparison_examples.json  eval_scenarios.json  scenarios_draft.md  train_scenarios.json
demo/: before_after.md  replay.py  video_script.md  walkthrough_hour_4.py  walkthrough_hour_6.py  walkthrough_hour_9_http.sh
eval/: eval.py  rollout.py  run_eval_hf_job.sh
notebook/: train_colab.ipynb
plots/: eval_mock.json  eval_results.json  make_plots.py  training_log.jsonl
server/: Dockerfile  __init__.py  app.py  dashboard_ui.py  safe_sre_env_environment.py
tests/: test_bash_parser.py  test_env.py  test_rewards.py  test_scenarios.py  test_state.py  test_train_grpo.py
train/: hf_job_runner.sh  train_grpo.py
