# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-safe_sre_env"
version = "0.1.0"
description = "Safe Sre Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime (provides FastAPI server + HTTP client types)
    # install from github
    # "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git",
    "openenv-core[core]>=0.2.2",
    # Bash parser used by core/bash_parser.py to AST-walk the agent's
    # execute_bash payloads and classify safe / risky / catastrophic commands.
    "bashlex>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m safe_sre_env.server.app
server = "safe_sre_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["safe_sre_env", "safe_sre_env.server"]
package-dir = { "safe_sre_env" = ".", "safe_sre_env.server" = "server" }